deploy/kubernetes/trivy-web/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trivy-web
spec:
  selector:
    matchLabels:
      app: trivy-web
  template:
    metadata:
      labels:
        app: trivy-web
        version: 1.0.0
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: trivy-web
          image: athallerde/trivy-web:2024-07-24-1
          args:
            - "--binding=0.0.0.0:16223"
            - "--server"
            - "http://trivy-server.trivy-web.svc.cluster.local:4954"
            - "--redis-server"
            - "redis://redis-web.trivy-web.svc.cluster.local:6379"
            - "--jaeger-host"
            - "jaeger.trivy-web.svc.cluster.local"
          ports:
            - name: http
              containerPort: 16223
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 5
              memory: 2Gi
          volumeMounts:
            - name: cache
              mountPath: /var/cache/trivy-web
        - name: jaeger
          image: jaegertracing/all-in-one:1.59.0
          ports:
            - name: grpc
              containerPort: 16685
            - name: http
              containerPort: 16686
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 5
              memory: 2Gi
      volumes:
        - name: cache
          emptyDir: {}
